--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "loader-utils": "3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "react-error-boundary": "6.0.0",
-    "react-redux": "9.2.0",
-    "@reduxjs/toolkit": "2.9.2"
+    "@reduxjs/toolkit": "^2.9.2",
+    "loader-utils": "^3.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.0",
+    "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "@types/react-redux": "7.1.34",
-    "typescript": "4.4.4"
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@types/react-redux": "^7.1.34",
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +34,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "packageManager": "yarn@4.10.3+sha512.c38cafb5c7bb273f3926d04e55e1d8c9dfa7d9c3ea1f36a4868fa028b9e5f72298f0b7f401ad5eb921749eb012eb1c3bb74bf7503df3ee43fd600d14a018266f"
 }
